--- a/templates/djeocadengine/base_list.html
+++ b/templates/djeocadengine/base_list.html
@@ -18,7 +18,7 @@
     <div class="col" style="margin-bottom: 20px">
       <div class="card" id="nav-card">
         {% block nav-card %}
-          {% include "djeocad/htmx/base_list.html" %}
+          {% include "djeocadengine/htmx/base_list.html" %}
         {% endblock nav-card %}
       </div>
     </div>
