--- a/templates/djeocadengine/htmx/base_list.html
+++ b/templates/djeocadengine/htmx/base_list.html
@@ -8,7 +8,7 @@
     <p class="card-text">
       {% blocktrans %}
         Click on the markers and follow the link
-        to see the drawings.
+        to see the drawings in detail.
       {% endblocktrans %}
     </p>
   {% else %}
