--- a/templates/djeocadengine/includes/drawing_manual.html
+++ b/templates/djeocadengine/includes/drawing_manual.html
@@ -24,8 +24,14 @@
               {% endblocktrans %}
               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
-            {{ form.designx|as_crispy_field }}
-            {{ form.designy|as_crispy_field }}
+            <div class="row">
+              <div class="col">
+                {{ form.designx|as_crispy_field }}
+              </div>
+              <div class="col">
+                {{ form.designy|as_crispy_field }}
+              </div>
+            </div>
             {{ form.rotation|as_crispy_field }}
           </div>
           <div class="card-footer">
