moving id outside the card

--- a/templates/djeocadengine/htmx/layer_inline.html
+++ b/templates/djeocadengine/htmx/layer_inline.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div id="layer-{{ layer.id }}" class="card mx-auto" style="margin-bottom: 20px">
+<div class="card mx-auto" style="margin-bottom: 20px">
   <div class="card-header" style="background-color: {{ layer.color_field }}">
 
   </div>
