--- a/templates/djeocadengine/htmx/layer_inline.html
+++ b/templates/djeocadengine/htmx/layer_inline.html
@@ -1,8 +1,8 @@
 {% load i18n %}
 
-<div class="card mx-auto" style="margin-bottom: 20px">
+<div id="layer-detail-{{ layer.id }}" class="card mx-auto" style="margin-bottom: 20px">
   <div class="card-header" style="background-color: {{ layer.color_field }}">
-
+    <!-- Don't delete this comment -->
   </div>
   <div class="card-body">
     <p>
@@ -14,5 +14,27 @@
       {% trans 'ID' %}: <strong>{{ layer.id }}</strong> -
       {% trans 'Color' %}: <strong>{{ layer.color_field }}</strong>
     </p>
+    {% if not layer.is_block %}
+      <a class="btn btn-primary"
+         href="#"
+         title="{% trans 'Modify' %}">
+        <i class="bi-pencil" style="font-size: 1rem;"></i>
+      </a>
+      {% if layer.name != "0" %}
+        <button class="btn btn-danger"
+                hx-get="#"
+                hx-target="#layer-{{ layer.id }}"
+                hx-swap="outerHTML"
+                hx-confirm="{% trans 'Are you sure you want to delete this layer / block?' %}"
+                title="{% trans 'Delete' %}">
+          <i class="bi-trash" style="font-size: 1rem;"></i>
+          <span class="htmx-indicator spinner-border spinner-border-sm"></span>
+        </button>
+      {% endif %}
+    {% endif %}
   </div>
 </div>
+{% if not layer.is_block %}
+  <div id="layer-update-{{ layer.id }}" class="card mx-auto" style="margin-bottom: 20px; display: none">
+  </div>
+{% endif %}
