preparing drawing download view

--- a/templates/djeocadengine/htmx/drawing_detail.html
+++ b/templates/djeocadengine/htmx/drawing_detail.html
@@ -31,6 +31,12 @@
       </a>
     </li>
     <li>
+      <a class="link link-success"
+         href="{% url 'djeocadengine:drawing_download' pk=object.id %}">
+        {% trans "Download georeferenced DXF" %}
+      </a>
+    </li>
+    <li>
       <a class="link link-danger"
          hx-get="{% url 'djeocadengine:drawing_delete' pk=object.id %}"
          hx-target="#nav-card-body"
