--- a/templates/djeocadengine/htmx/base_list.html
+++ b/templates/djeocadengine/htmx/base_list.html
@@ -14,6 +14,23 @@
   {% else %}
     <p>{% trans "No drawings yet" %}</p>
   {% endif %}
+  {% if unreferenced %}
+    <div class="alert alert-danger">
+      {% trans "There are some unreferenced drawings" %}
+      <ul>
+        {% for unref in unreferenced %}
+          <li>
+            <a class="link alert-link"
+               hx-get="{% url 'djeocadengine:drawing_geodata' pk=unref.id %}"
+               hx-target="#content"
+               hx-push-url="true">
+              {{ unref.title }}
+            </a>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+  {% endif %}
   {% if user.is_authenticated %}
     <a class="btn btn-primary"
        hx-get="{% url 'djeocadengine:drawing_create' %}"
