--- a/templates/djeocadengine/htmx/drawing_detail.html
+++ b/templates/djeocadengine/htmx/drawing_detail.html
@@ -36,14 +36,16 @@
         {% trans "Download georeferenced DXF" %}
       </a>
     </li>
-    <li>
-      <a class="link link-danger"
-         hx-get="{% url 'djeocadengine:drawing_delete' pk=object.id %}"
-         hx-target="#nav-card-body"
-         hx-confirm="{% trans 'Are sure you want to delete this drawing?' %}">
-        {% trans "Delete drawing" %}
-      </a>
-    </li>
+    {% if user.is_authenticated %}
+      <li>
+        <a class="link link-danger"
+           hx-get="{% url 'djeocadengine:drawing_delete' pk=object.id %}"
+           hx-target="#nav-card-body"
+           hx-confirm="{% trans 'Are sure you want to delete this drawing?' %}">
+          {% trans "Delete drawing" %}
+        </a>
+      </li>
+    {% endif %}
   </ul>
 </div>
 {% include "djeocadengine/includes/map_data.html" %}
