--- a/templates/djeocadengine/htmx/drawing_delete.html
+++ b/templates/djeocadengine/htmx/drawing_delete.html
@@ -3,6 +3,7 @@
 <div class="alert alert-danger"
      hx-get="{% url 'djeocadengine:base_list' %}"
      hx-target="#nav-card"
-     hx-trigger="load delay:300ms">
+     hx-trigger="load delay:300ms"
+     hx-push-url="true">
   {% trans "Deleting..." %}<span class="spinner-border spinner-border-sm"></span>
 </div>
