stripping leaflet template tags

--- a/templates/djeocadengine/base_list.html
+++ b/templates/djeocadengine/base_list.html
@@ -1,17 +1,14 @@
 {% extends "base.html" %}
 {% load static %}
-{% load leaflet_tags %}
 {% load partials %}
 
 {% block extra-head %}
-  {% leaflet_js %}
-  {% leaflet_css %}
-  <style>
-    .leaflet-container {  /* all maps */
-      height: 600px;
-      margin-bottom: 20px;
-    }
-  </style>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+        crossorigin=""/>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+          integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+          crossorigin=""></script>
 {% endblock extra-head %}
 
 {% block content %}
@@ -25,7 +22,7 @@
     </div>
     <script src="{% static 'djeocadengine/js/base_list.js'%}"></script>
     <div class="col col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12">
-      {% leaflet_map "mymap" callback="window.map_init" %}
+      <div id="engine-map" style="height: 600px; margin-bottom: 20px"></div>
     </div>
   </div>
 {% endblock content %}
