--- a/templates/djeocadengine/base_form.html
+++ b/templates/djeocadengine/base_form.html
@@ -1,17 +1,1 @@
-{% extends "base.html" %}
-{% load leaflet_tags %}
-
-{% block extra-head %}
-  {% leaflet_js plugins="forms" %}
-  {% leaflet_css plugins="forms" %}
-  {{ form.media }}
-  <style>
-    .leaflet-container {  /* all maps */
-      height: 600px;
-      margin-bottom: 20px;
-    }
-  </style>
-{% endblock extra-head %}
-
-{% block content %}
-{% endblock content %}
+{% extends "djeocadengine/base_list.html" %}
