--- a/templates/djeocadengine/includes/map_data.html
+++ b/templates/djeocadengine/includes/map_data.html
@@ -3,3 +3,4 @@
 <script id="marker_data" type="application/json">{{ drawings|geojsonfeature:"popupContent"|safe }}</script>
 <script id="line_data" type="application/json">{{ lines|geojsonfeature:"popupContent"|safe }}</script>
 {{ layer_list|json_script:"layer_data" }}
+{{ leaflet_config|json_script:"leaflet_config" }}
