drawing update view in nav card

--- a/templates/djeocadengine/htmx/drawing_detail.html
+++ b/templates/djeocadengine/htmx/drawing_detail.html
@@ -18,12 +18,15 @@
         {% trans "Back to list" %}
       </a>
     </li>
-    <li>
-      <a class="link link-primary"
-         href="{% url 'djeocadengine:drawing_update' pk=object.id %}">
-        {% trans "Modify drawing" %}
-      </a>
-    </li>
+    {% if user.is_authenticated %}
+      <li>
+        <a class="link link-primary"
+           hx-get="{% url 'djeocadengine:drawing_update' pk=object.id %}"
+           hx-target="#nav-card">
+          {% trans "Modify drawing" %}
+        </a>
+      </li>
+    {% endif %}
     <li>
       <a class="link link-success"
          href="{% url 'djeocadengine:drawing_csv' pk=object.id %}">
