--- a/templates/djeocadengine/htmx/drawing_update.html
+++ b/templates/djeocadengine/htmx/drawing_update.html
@@ -47,18 +47,21 @@
     </button>
   </form>
 </div>
-<div>
-  <h4>{% trans "Layers" %}</h4>
-  {% for layer in layers %}
-    <div id="layer-{{ layer.id }}">
+<div class="card-footer">
+  <div>
+    <h4>{% trans "Layers" %}</h4>
+    {% for layer in layers %}
+      <div id="layer-{{ layer.id }}">
+        {% include "djeocadengine/htmx/layer_inline.html" %}
+      </div>
+    {% endfor %}
+  </div>
+  <hr>
+  <div>
+    <h4>{% trans "Blocks" %}</h4>
+    {% for layer in blocks %}
       {% include "djeocadengine/htmx/layer_inline.html" %}
-    </div>
-  {% endfor %}
+    {% endfor %}
+  </div>
 </div>
-<div>
-  <h4>{% trans "Blocks" %}</h4>
-  {% for layer in blocks %}
-    {% include "djeocadengine/htmx/layer_inline.html" %}
-  {% endfor %}
-</div>
-</div>
+{% include "djeocadengine/includes/map_data.html" %}
