fixed map behaviour

--- a/templates/djeocadengine/htmx/drawing_update.html
+++ b/templates/djeocadengine/htmx/drawing_update.html
@@ -51,7 +51,7 @@
   <a id="layer-show"
      class="link link-primary"
      script="on click hide me then show #layer-list">
-    {% trans "See layers" %}
+    {% trans "Show layers" %}
   </a>
   <div id="layer-list" style="display: none">
     <a id="layer-show"
