--- a/templates/djeocadengine/includes/map_data.html
+++ b/templates/djeocadengine/includes/map_data.html
@@ -4,3 +4,4 @@
 <script id="line_data" type="application/json">{{ lines|geojsonfeature:"popupContent"|safe }}</script>
 {{ layer_list|json_script:"layer_data" }}
 {{ leaflet_config|json_script:"leaflet_config" }}
+{{ map_status|json_script:"map_status" }}
